# brainmaze_mefd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DOCUMENTATION.md  LICENSE  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  brainmaze_mefd  brainmaze_mefd_tests  brainmaze_mefd_tests[1]_include.cmake  brainmaze_mefd_tests[1]_tests.cmake  cmake_install.cmake
_codeql_build_dir/tests/: Makefile  cmake_install.cmake  test_brainmaze_mefd
cmake/: brainmaze_mefdConfig.cmake.in
docs/: QUICKREF.md  api.md  getting_started.md  installation.md
include/: brainmaze_mefd.hpp
include/brainmaze_mefd/: aes.hpp  constants.hpp  crc.hpp  mef.hpp  mef_reader.hpp  mef_writer.hpp  red.hpp  sha256.hpp  structures.hpp  types.hpp
legacy/c/: README.md
legacy/python/: README.md
old_codes/meflib/meflib/: meflib.c
old_codes/pymef/: readme.md
python/: CMakeLists.txt  bindings.cpp
src/: aes.cpp  brainmaze_mefd.cpp  crc.cpp  main.cpp  mef_reader.cpp  mef_writer.cpp  red.cpp  sha256.cpp
tests/: CMakeLists.txt  test_aes.cpp  test_brainmaze_mefd.cpp  test_crc.cpp  test_main.cpp  test_mef.cpp  test_red.cpp  test_sha256.cpp
